--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   <!--start-logo-->
   <div class="logo">
     <%= link_to root_path do %>
-      <h1>Luxury Watches</h1>
+      <h1>Mobile Phones</h1>
     <% end %>
   </div>
   <!--start-logo-->
