--- a/app/views/product/show.html.erb
+++ b/app/views/product/show.html.erb
@@ -80,33 +80,18 @@
               <p><%= @product.content %></p>
               <div class="available">
                 <ul>
-                  <li>Color
+                  <li>Memory
                     <select>
-                      <option>Silver</option>
-                      <option>Black</option>
-                      <option>Dark Black</option>
-                      <option>Red</option>
+                      <option>16</option>
+                      <option>32</option>
+                      <option>64</option>
+                      <option>128</option>
                     </select></li>
-                  <li class="size-in">Size<select>
-                    <option>Large</option>
-                    <option>Medium</option>
-                    <option>small</option>
-                    <option>Large</option>
-                    <option>small</option>
-                  </select></li>
                   <div class="clearfix"> </div>
                 </ul>
               </div>
-              <ul class="tag-men">
-                <li><span>CATEGORY</span>
-                  <strong>:
-
-                  </strong>
-                </li>
-              </ul>
               <div class="quantity">
                 <input type="number" size="4" value="1" name="quantity" min="1" step="1">
-
               </div>
 
               <%=
@@ -137,56 +122,6 @@
                 <li class="subitem1"><a href="#"><%= @product.description %></a></li>
               </ul>
             </li>
-            <li class="item2"><a href="#"><img src="<%= asset_path 'arrow.png' %>" alt="">Additional information</a>
-              <ul>
-                <li class="subitem2"><a href="#"> Duis autem vel eum iriure dolor in hendrerit in
-                  vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis
-                  at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril
-                  delenit augue duis dolore</a></li>
-                <li class="subitem3"><a href="#">Mirum est notare quam littera gothica, quam nunc
-                  putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta
-                  decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant
-                  sollemnes </a></li>
-              </ul>
-            </li>
-            <li class="item3"><a href="#"><img src="<%= asset_path 'arrow.png' %>" alt="">Reviews (10)</a>
-              <ul>
-                <li class="subitem1"><a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                  sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                  Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
-                  nisl ut aliquip ex ea commodo consequat.</a></li>
-                <li class="subitem2"><a href="#"> Duis autem vel eum iriure dolor in hendrerit in vulputate
-                  velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et
-                  accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore</a></li>
-                <li class="subitem3"><a href="#">Mirum est notare quam littera gothica, quam nunc putamus
-                  parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et
-                  quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes </a></li>
-              </ul>
-            </li>
-            <li class="item4"><a href="#"><img src="<%= asset_path 'arrow.png' %>" alt="">Helpful Links</a>
-              <ul>
-                <li class="subitem2"><a href="#"> Duis autem vel eum iriure dolor in hendrerit in vulputate
-                  velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et
-                  accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore</a></li>
-                <li class="subitem3"><a href="#">Mirum est notare quam littera gothica, quam nunc putamus
-                  parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et
-                  quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes </a></li>
-              </ul>
-            </li>
-            <li class="item5"><a href="#"><img src="<%= asset_path 'arrow.png' %>" alt="">Make A Gift</a>
-              <ul>
-                <li class="subitem1"><a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                  sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                  Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
-                  nisl ut aliquip ex ea commodo consequat.</a></li>
-                <li class="subitem2"><a href="#"> Duis autem vel eum iriure dolor in hendrerit in vulputate
-                  velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros
-                  et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore</a></li>
-                <li class="subitem3"><a href="#">Mirum est notare quam littera gothica, quam nunc putamus
-                  parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et q
-                  uinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes </a></li>
-              </ul>
-            </li>
           </ul>
         </div>
 
@@ -214,7 +149,6 @@
                       </h4>
                     </div>
                     <div class="srch">
-                      <span>-50%</span>
                     </div>
                   </div>
                 </div>
@@ -253,7 +187,6 @@
                       </h4>
                     </div>
                     <div class="srch">
-                      <span>-50%</span>
                     </div>
                   </div>
                 </div>
@@ -267,8 +200,7 @@
         <% end %>
 
       </div>
-
-      <div class="col-md-3 single-right">
+      <div class="col-md-3 prdt-right">
         <div class="w_sidebar">
           <section  class="sky-form">
             <h4>Categories</h4>
@@ -280,68 +212,6 @@
                 <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Women Watches</label>
                 <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Kids Watches</label>
                 <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Men Watches</label>
-              </div>
-            </div>
-          </section>
-          <section  class="sky-form">
-            <h4>Brand</h4>
-            <div class="row1 row2 scroll-pane">
-              <div class="col col-4">
-                <label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>kurtas</label>
-              </div>
-              <div class="col col-4">
-                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Sonata</label>
-                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Titan</label>
-                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Casio</label>
-                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Omax</label>
-                <label class="checkbox"><input type="checkbox" name="checkbox" ><i></i>shree</label>
-                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Fastrack</label>
-                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Sports</label>
-                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Fossil</label>
-                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Maxima</label>
-                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Yepme</label>
-                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Citizen</label>
-                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Diesel</label>
-              </div>
-            </div>
-          </section>
-          <section class="sky-form">
-            <h4>Colour</h4>
-            <ul class="w_nav2">
-              <li><a class="color1" href="#"></a></li>
-              <li><a class="color2" href="#"></a></li>
-              <li><a class="color3" href="#"></a></li>
-              <li><a class="color4" href="#"></a></li>
-              <li><a class="color5" href="#"></a></li>
-              <li><a class="color6" href="#"></a></li>
-              <li><a class="color7" href="#"></a></li>
-              <li><a class="color8" href="#"></a></li>
-              <li><a class="color9" href="#"></a></li>
-              <li><a class="color10" href="#"></a></li>
-              <li><a class="color12" href="#"></a></li>
-              <li><a class="color13" href="#"></a></li>
-              <li><a class="color14" href="#"></a></li>
-              <li><a class="color15" href="#"></a></li>
-              <li><a class="color5" href="#"></a></li>
-              <li><a class="color6" href="#"></a></li>
-              <li><a class="color7" href="#"></a></li>
-              <li><a class="color8" href="#"></a></li>
-              <li><a class="color9" href="#"></a></li>
-              <li><a class="color10" href="#"></a></li>
-            </ul>
-          </section>
-          <section class="sky-form">
-            <h4>discount</h4>
-            <div class="row1 row2 scroll-pane">
-              <div class="col col-4">
-                <label class="radio"><input type="radio" name="radio" checked=""><i></i>60 % and above</label>
-                <label class="radio"><input type="radio" name="radio"><i></i>50 % and above</label>
-                <label class="radio"><input type="radio" name="radio"><i></i>40 % and above</label>
-              </div>
-              <div class="col col-4">
-                <label class="radio"><input type="radio" name="radio"><i></i>30 % and above</label>
-                <label class="radio"><input type="radio" name="radio"><i></i>20 % and above</label>
-                <label class="radio"><input type="radio" name="radio"><i></i>10 % and above</label>
               </div>
             </div>
           </section>
