--- a/app/views/product/_form.html.erb
+++ b/app/views/product/_form.html.erb
@@ -31,6 +31,10 @@
                       <%= form.text_field :description, class: "" %>
                     </div>
                     <div class="form-group has-feedback">
+                      <%= form.label :content %><br>
+                      <%= form.text_field :content, class: "" %>
+                    </div>
+                    <div class="form-group has-feedback">
                       <%= form.label :price %><br>
                       <%= form.number_field :price, min: 0, class: "" %>
                     </div>
