--- a/app/views/product/show.html.erb
+++ b/app/views/product/show.html.erb
@@ -94,9 +94,17 @@
             </div>
             <% if user_signed_in? %>
               <% if current_user.try(:admin?) %>
-                <%= button_to 'Delete', @product, class: "",
+                <%=
+                  link_to 'Edit',
+                          edit_product_path(@product),
+                          :class => 'btn btn-info'
+                %>
+
+                <%= link_to 'Delete', @product, class: "btn btn-danger",
                               method: :delete,
-                              data: { confirm: 'Are you sure?'}, remote: true %>
+                              data: { confirm: 'Are you sure?'},
+                              remote: true
+                %>
                 <div class="clearfix"></div>
               <% end %>
             <% end %>
