--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1739,7 +1739,7 @@ ul {
 .menu_drop ul li a {
 	background: #fff;
 	width: 100%;
-	height: 5em;
+	height: auto;
 	line-height: 1.8em;
 	display: block;
 	position: relative;
