Edit product and start page

--- a/app/views/category/show.html.erb
+++ b/app/views/category/show.html.erb
@@ -26,9 +26,9 @@
                     <p>Explore Now</p>
                     <h4>
                       <a data-id="<%=product.id %>" class="add-to-cart-link" href="cart/add?id=<%=product.id %>"><i></i></a>
-                      <span class=" item_price"><%=product.price %></span>
+                      <span class=" item_price">$ <%=product.price %></span>
                       <% if product.old_price %>
-                        <small><del><%= product.old_price %></del></small>
+                        <small><del>$ <%= product.old_price %></del></small>
                       <% end %>
                     </h4>
                   </div>
@@ -42,7 +42,7 @@
           <h3>В этой категории товаров пока нет...</h3>
         <% end %>
       </div>
-      <div class="col-md-3 prdt-right">
+      <!--<div class="col-md-3 prdt-right">
         <div class="w_sidebar">
           <section  class="sky-form">
             <h4>Categories</h4>
@@ -58,7 +58,7 @@
             </div>
           </section>
         </div>
-      </div>
+      </div>-->
       <div class="clearfix"></div>
     </div>
   </div>
