--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,22 +1,19 @@
 <!--banner-starts-->
-<!--
+
 <div class="bnr" id="home">
   <div  id="top" class="callbacks_container">
     <ul class="rslides" id="slider4">
       <li>
-        <%= image_tag("bnr-1.jpg", alt: "" ) %>
+        <%= image_tag("ss2.jpg", alt: "" ) %>
       </li>
       <li>
-        <%= image_tag("bnr-2.jpg", alt: "" ) %>
-      </li>
-      <li>
-        <%= image_tag("bnr-3.jpg", alt: "" ) %>
+        <%= image_tag("ss3.jpg", alt: "" ) %>
       </li>
     </ul>
   </div>
   <div class="clearfix"> </div>
 </div>
--->
+
 <!--banner-ends-->
 
 <% if @brands.nil? %>
