--- a/app/views/product/show.html.erb
+++ b/app/views/product/show.html.erb
@@ -78,7 +78,7 @@
 
               <h5 class="item_price">$ <%= @product.price %> </h5>
               <% if @product.old_price %>
-                <del><%= @product.old_price %></del>
+                <del>$ <%= @product.old_price %></del>
               <% end %>
               <p><%= @product.content %></p>
               <div class="quantity">
