--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -411,10 +411,10 @@ span.simpleCart_total {
 	right: 16.4%;
 }
 .rslides {
-  position: relative;
+  position: center;
   list-style: none;
   overflow: hidden;
-  width: 100%;
+  max-height: 500px;
   padding: 0;
   margin: 0;
 }
@@ -625,9 +625,10 @@ figure.effect-bubba:hover p,figure.effect-bubba:hover h2 {
     padding: 3em 0px 6em 0px;
 }
 .product-bottom h3 {
-    font-size: 16px;
+    font-size: 18px;
     color: #000;
     margin: 0;
+	min-height: 40px; //минимальная длина названия продукта
     text-transform: uppercase;
 	font-family: 'BreeSerif-Regular';
 }
@@ -650,7 +651,7 @@ figure.effect-bubba:hover p,figure.effect-bubba:hover h2 {
 }
 .product-bottom {
     text-align: left;
-    margin-top: 20px;
+    margin-top: 40px;
     padding-left: 30px;
 }
 .product-bottom p {
@@ -2447,7 +2448,7 @@ figure.effect-bubba p {
     margin-right: 2px;
 }
 .product-main {
-    padding: 10px 0px 1.5em 0px;
+    padding: 100px 0px 1.5em 0px;
 }
 .product-left {
     padding: 0 6px;
