--- a/app/views/include/main/_top_header.html.erb
+++ b/app/views/include/main/_top_header.html.erb
@@ -8,29 +8,29 @@
               <% if user_signed_in? %>
                 <li>
                   <a href="#">
-                    Добро пожаловать, <%= current_user.email %>
+                    Welcome, <%= current_user.email %>
                   </a>
                 </li>
                 <% if current_user.try(:admin?) %>
                   <li>
-                    <%= link_to 'ADMINISTRATOR', '#', style: "color: red" %>
+                    <%= link_to 'You Administrator', '#', style: "color: red" %>
                   </li>
                   <li>
                     <%= link_to 'Add new product', new_product_path, class: "" %>
                   </li>
                 <% end %>
                 <li>
-                  <%= link_to 'Выход', destroy_user_session_path, method: :delete %>
+                  <%= link_to 'Edit profile', edit_user_registration_path %>
                 </li>
                 <li>
-                  <%= link_to 'Редактирование', edit_user_registration_path %>
+                  <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
                 </li>
               <% else %>
                 <li>
-                  <%= link_to 'Вход', new_user_session_path %>
+                  <%= link_to 'Sign in', new_user_session_path %>
                 </li>
                 <li>
-                  <%= link_to 'Регистрация', new_user_registration_path %>
+                  <%= link_to 'Sign up', new_user_registration_path %>
                 </li>
               <% end %>
             </ul>
