--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="prdt-top">
       <div class="col-md-9 prdt-left">
-        <% if @products  %>
+        <% if !@products.empty?  %>
           <div class="product-one">
             <% @products.each do |prod|  %>
               <div class="col-md-4 product-left p-left">
@@ -40,7 +40,7 @@
             <div class="clearfix"></div>
           </div>
         <% else %>
-          <h3>Nothing to show</h3>
+          <h3>Nothing to show...</h3>
         <% end %>
       </div>
       <div class="clearfix"></div>
