--- a/app/views/product/show.html.erb
+++ b/app/views/product/show.html.erb
@@ -123,7 +123,7 @@
             </li>
           </ul>
         </div>
-
+<!--
         <% unless @product.related.nil? %>
 
           <div class="latestproducts">
@@ -158,7 +158,7 @@
             </div>
           </div>
 
-        <% end %>
+        <% end %> -->
 
         <% if recent_products.any? %>
 
